// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cognito mappings > Should map AWS::Cognito::IdentityPool 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cognito_identity_pool": {
      "resource_22C949BF": {
        "allow_classic_flow": true,
        "allow_unauthenticated_identities": true,
        "cognito_identity_providers": [
          {
            "client_id": "client-id",
            "provider_name": "provider-name",
            "server_side_token_check": true
          }
        ],
        "developer_provider_name": "developer-provider-name",
        "identity_pool_name": "identity-pool-name",
        "openid_connect_provider_arns": [
          "open-id-connect-provider-arn"
        ],
        "saml_provider_arns": [
          "saml-provider-arn"
        ],
        "supported_login_providers": {
          "login-provider": "login-provider"
        },
        "tags": {
          "key": "value"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cognito_identity_pool.resource_22C949BF.id, \\",\\", aws_cognito_identity_pool.resource_22C949BF.identity_pool_name])}",
      "type": "string"
    }
  }
}"
`;

exports[`Cognito mappings > Should map AWS::Cognito::IdentityPoolRoleAttachment 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cognito_identity_pool_roles_attachment": {
      "resource_22C949BF": {
        "identity_pool_id": "identity-pool-id",
        "role_mapping": [
          {
            "ambiguous_role_resolution": "AuthenticatedRole",
            "identity_provider": "cognito-idp",
            "mapping_rule": [
              {
                "claim": "claim",
                "match_type": "Equals",
                "role_arn": "role-arn",
                "value": "value"
              }
            ],
            "type": "Token"
          }
        ],
        "roles": {
          "authenticated": "authenticated-role",
          "unauthenticated": "unauthenticated-role"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_cognito_identity_pool_roles_attachment.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Cognito mappings > Should map AWS::Cognito::UserPoolClient 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cognito_user_pool_client": {
      "resource_22C949BF": {
        "access_token_validity": 60,
        "allowed_oauth_flows": [
          "code"
        ],
        "allowed_oauth_flows_user_pool_client": true,
        "allowed_oauth_scopes": [
          "email"
        ],
        "analytics_configuration": [
          {
            "application_arn": "application-arn",
            "application_id": "application-id",
            "external_id": "external-id",
            "role_arn": "role-arn",
            "user_data_shared": true
          }
        ],
        "auth_session_validity": 60,
        "callback_urls": [
          "callback-url"
        ],
        "default_redirect_uri": "default-redirect-uri",
        "enable_propagate_additional_user_context_data": true,
        "enable_token_revocation": true,
        "explicit_auth_flows": [
          "USER_PASSWORD_AUTH"
        ],
        "generate_secret": true,
        "id_token_validity": 60,
        "logout_urls": [
          "logout-url"
        ],
        "name": "client-name",
        "prevent_user_existence_errors": "ENABLED",
        "read_attributes": [
          "email"
        ],
        "refresh_token_validity": 60,
        "supported_identity_providers": [
          "COGNITO"
        ],
        "token_validity_units": [
          {
            "access_token": "seconds",
            "id_token": "seconds",
            "refresh_token": "seconds"
          }
        ],
        "user_pool_id": "user-pool-id",
        "write_attributes": [
          "email"
        ]
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_cognito_user_pool_client.resource_22C949BF.id, \\",\\", aws_cognito_user_pool_client.resource_22C949BF.client_secret, \\",\\", aws_cognito_user_pool_client.resource_22C949BF.name])}",
      "type": "string"
    }
  }
}"
`;
